# zero2prod

./: .env  Cargo.toml  README.md  configuration.yaml
.github/workflows/: ci.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
