[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.0.0-beta.8"
reqwest = "0.11.4"
serde = { version = "1", features = ["derive"]}

[dev-dependencies]
actix-rt = "2"
tokio = "1"
